[package]
name = "igvm_svsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
igvm_defs = { path = '../igvm/igvm_defs' }
igvm = { path = '../igvm/igvm' }
zerocopy = "0.7.32"
bitflags = "2.4"
uuid = "1.6.1"

